Fixed project card alignment for mobile devices

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,6 +1,6 @@
 .card {
     background: var(--color-white);
-    padding: 1.2rem;
+    padding: 1.5rem;
     border: 2px solid transparent;
     border-radius: var(--border-radius-1);
     transition: var(--transition);
@@ -22,9 +22,9 @@
 }
 
 
-/* MEDIA QUERIES (Desktop & Tablets) */
-@media screen and (min-width: 600px) {
+/* MEDIA QUERIES (Phones) */
+@media screen and (max-width: 600px) {
     .card {
-        padding: 1.5rem;
+        padding: 1.2rem;
     }
 }
